# FuneralTheBot

./: Dockerfile  Makefile  README.md  pyproject.toml  session.session
src/: app.py  handlers.py  logger.py  webhook.py
src/exceptions/: giphy_api_erorr.py  validation_error.py
src/ioc/: application_container.py  logging_container.py  services_container.py  settings_container.py
src/proto/: get_chat_members.py
src/services/: base_commands_service.py  formatter_service.py  giphy_service.py  participants_service.py  validator_service.py
